--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -34,6 +34,7 @@
 // Skins
 @import "mixins/border-radius";
 @import "mixins/box-shadow";
+@import "mixins/elevation";
 @import "mixins/gradients";
 @import "mixins/transition";
 
@@ -44,3 +45,6 @@
 
 // CSS Variables
 @import "mixins/css-vars";
+
+// Themes
+@import "mixins/theme";
