--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -32,6 +32,7 @@
   border: $dropdown-border-width solid var(--#{$variable-prefix}dropdown-border-color, $dropdown-border-color);
   @include border-radius($dropdown-border-radius);
   @include box-shadow($dropdown-box-shadow);
+  @include elevation(4);
 
   // Reset positioning when positioned with Popper
   &[style] {
