--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,16 +10,9 @@
   border-top: var(--#{$variable-prefix}footer-border-width, $footer-border-width) solid var(--#{$variable-prefix}footer-border-color, $footer-border-color);
 }
 
-.footer-fixed {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: $zindex-fixed;
-}
-
 .footer-sticky {
   position: sticky;
   bottom: 0;
   z-index: $zindex-fixed;
+  @include elevation(2, "top");
 }
