--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -90,6 +90,7 @@
   @include box-shadow($modal-content-box-shadow-xs);
   // Remove focus outline from opened modal
   outline: 0;
+  @include elevation(24);
 }
 
 // Modal background
