--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -119,8 +119,7 @@
   background-clip: padding-box;
   border: $form-multi-select-options-border-width solid var(--#{$variable-prefix}form-multi-select-options-border-color, $form-multi-select-options-border-color);
   @include border-radius($form-multi-select-options-border-radius);
-  // @include box-shadow($dropdown-box-shadow);
-  // @include elevation(4);
+  @include elevation(4);
 }
 
 .form-multi-select-option {
@@ -254,6 +253,6 @@
     padding: 0;
     background-color: transparent;
     border: 0;
-    // @include elevation(0);
+    @include elevation(0);
   }
 }
