docs: add utility classes to remove elevation

--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header header-sticky mb-5">
+<header class="header header-sticky mb-5 elevation-0 border-bottom">
   <div class="container-fluid">
     <button class="header-toggler d-lg-none" type="button" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation" onclick="coreui.Sidebar.getInstance(document.querySelector('#sidebar')).toggle()">
       {{ partial "icons/hamburger.svg" (dict "class" "bi" "width" "32" "height" "32") }}
